--- a/index.html
+++ b/index.html
@@ -3,67 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CAFE - The Space Experience</title>
+    <title>CAFE - Silence & Space</title>
     <style>
-        body, html { margin: 0; padding: 0; background: #0a0a0a; color: #fff; font-family: "Helvetica Neue", Arial, sans-serif; overflow-x: hidden; }
+        :root { --bg: #0a0a0a; --accent: #c5a059; --text-muted: rgba(255,255,255,0.6); }
+        body, html { margin: 0; padding: 0; background: var(--bg); color: #fff; font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", sans-serif; line-height: 1.6; }
         
-        /* ヒーロー：圧倒的な没入感 */
+        /* 1. Hero Section */
         .hero {
             height: 100vh;
-            background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), 
+            background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
                         url('https://images.unsplash.com/photo-1445116572660-236099ec97a0?q=80&w=2000') center/cover no-repeat;
             display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center;
         }
-        .hero h1 { font-size: clamp(2rem, 10vw, 6rem); font-weight: 100; letter-spacing: 0.4em; margin-bottom: 0.5em; text-transform: uppercase; }
-        .hero p { font-size: 1.2rem; letter-spacing: 0.8em; font-weight: 200; color: rgba(255,255,255,0.7); }
+        .hero h1 { font-size: clamp(3rem, 12vw, 7rem); font-weight: 100; letter-spacing: 0.5em; margin: 0; text-transform: uppercase; }
+        .hero p { font-size: 1rem; letter-spacing: 1em; color: var(--accent); margin-top: 20px; }
 
-        /* フォトギャラリー：空間の魅力 */
-        .gallery { padding: 100px 5vw; display: grid; grid-template-columns: repeat(12, 1fr); gap: 2vw; }
-        .img-box { position: relative; overflow: hidden; background: #1a1a1a; transition: 0.6s cubic-bezier(0.22, 1, 0.36, 1); }
-        .img-box img { width: 100%; height: 100%; object-fit: cover; opacity: 0.8; transition: 0.8s; }
-        .img-box:hover img { opacity: 1; transform: scale(1.05); }
+        /* Common Layout */
+        section { padding: 120px 5vw; max-width: 1400px; margin: 0 auto; }
+        .section-title { font-size: 0.8rem; letter-spacing: 0.5em; color: var(--accent); text-align: center; margin-bottom: 60px; text-transform: uppercase; }
 
-        /* 雑誌のようなレイアウト */
-        .tall { grid-column: span 5; height: 80vh; }
-        .wide { grid-column: span 7; height: 50vh; }
+        /* 2. Gallery Section */
+        .gallery { display: grid; grid-template-columns: repeat(12, 1fr); gap: 20px; }
+        .img-box { overflow: hidden; background: #1a1a1a; position: relative; }
+        .img-box img { width: 100%; height: 100%; object-fit: cover; transition: 1.2s cubic-bezier(0.2, 1, 0.3, 1); opacity: 0.8; }
+        .img-box:hover img { transform: scale(1.08); opacity: 1; }
+        
+        .tall { grid-column: span 5; height: 70vh; }
+        .wide { grid-column: span 7; height: 40vh; }
         .square { grid-column: span 4; height: 40vh; }
-        .center { grid-column: 4 / span 6; height: 60vh; margin-top: -5vh; }
+        .center { grid-column: 3 / span 8; height: 60vh; }
 
-        /* テキスト：余白の美 */
-        .quote { grid-column: span 12; padding: 15vh 0; text-align: center; font-size: 1.5rem; font-weight: 200; line-height: 3; letter-spacing: 0.2em; color: #aaa; }
+        /* 3. Menu Section */
+        .menu-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 60px; padding: 0 10%; }
+        .menu-item { border-bottom: 1px solid rgba(255,255,255,0.1); padding: 15px 0; display: flex; justify-content: space-between; align-items: baseline; }
+        .menu-name { font-weight: 200; letter-spacing: 0.1em; }
+        .menu-price { font-size: 0.9rem; color: var(--accent); }
+
+        /* 4. Access Section */
+        .access-info { text-align: center; font-weight: 200; letter-spacing: 0.1em; line-height: 2.5; }
+        .map-placeholder { width: 100%; height: 400px; background: #111; margin-top: 40px; border: 1px solid rgba(255,255,255,0.05); display: flex; align-items: center; justify-content: center; color: var(--text-muted); }
+
+        /* Footer */
+        footer { padding: 60px; text-align: center; font-size: 0.7rem; color: var(--text-muted); letter-spacing: 0.2em; border-top: 1px solid rgba(255,255,255,0.05); }
 
         @media (max-width: 768px) {
-            .gallery { display: block; }
+            .gallery, .menu-grid { display: block; }
             .img-box { width: 100%; height: 50vh; margin-bottom: 20px; }
+            .menu-item { margin-bottom: 10px; }
         }
     </style>
 </head>
 <body>
 
-    <section class="hero">
+    <div class="hero">
         <h1>Silence</h1>
         <p>TIME AND SPACE</p>
+    </div>
+
+    <section id="space">
+        <div class="section-title">The Space</div>
+        <div class="gallery">
+            <div class="img-box tall"><img src="https://images.unsplash.com/photo-1497935586351-b67a49e012bf?q=80&w=1200"></div>
+            <div class="img-box wide"><img src="https://images.unsplash.com/photo-1507133750040-4a8f57021571?q=80&w=1200"></div>
+            <div class="img-box square"><img src="https://images.unsplash.com/photo-1453614512568-c4024d13c247?q=80&w=800"></div>
+            <div class="img-box center"><img src="https://images.unsplash.com/photo-1525610553991-2bede1a236e2?q=80&w=1200"></div>
+        </div>
     </section>
 
-    <div class="gallery">
-        <div class="quote">
-            目に映るもの、すべてがデザイン。<br>
-            静寂という名の、贅沢。
+    <section id="menu">
+        <div class="section-title">Menu</div>
+        <div class="menu-grid">
+            <div class="menu-column">
+                <div class="menu-item"><span class="menu-name">Hand Drip Coffee</span><span class="menu-price">¥650</span></div>
+                <div class="menu-item"><span class="menu-name">Cold Brew</span><span class="menu-price">¥700</span></div>
+                <div class="menu-item"><span class="menu-name">Cafe Latte</span><span class="menu-price">¥750</span></div>
+            </div>
+            <div class="menu-column">
+                <div class="menu-item"><span class="menu-name">Seasonal Tart</span><span class="menu-price">¥800</span></div>
+                <div class="menu-item"><span class="menu-name">Gateau Chocolat</span><span class="menu-price">¥750</span></div>
+                <div class="menu-item"><span class="menu-name">Scone (2pcs)</span><span class="menu-price">¥600</span></div>
+            </div>
         </div>
+    </section>
 
-        <div class="img-box tall">
-            <img src="https://images.unsplash.com/photo-1497935586351-b67a49e012bf?q=80&w=1200" alt="Space1">
+    <section id="access">
+        <div class="section-title">Access</div>
+        <div class="access-info">
+            <p>東京都渋谷区神南 0-0-0<br>
+            Open: 11:00 - 19:00 (L.O 18:30)<br>
+            Closed: Tuesday</p>
         </div>
-        <div class="img-box wide">
-            <img src="https://images.unsplash.com/photo-1507133750040-4a8f57021571?q=80&w=1200" alt="Space2">
-        </div>
-        <div class="img-box square">
-            <img src="https://images.unsplash.com/photo-1453614512568-c4024d13c247?q=80&w=800" alt="Space3">
-        </div>
-        <div class="img-box center">
-            <img src="https://images.unsplash.com/photo-1525610553991-2bede1a236e2?q=80&w=1200" alt="Space4">
-        </div>
-    </div>
+        <div class="map-placeholder">Google Map Will Be Here</div>
+    </section>
+
+    <footer>
+        &copy; 2025 THE SANCTUARY CAFE.
+    </footer>
 
 </body>
 </html>
