--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <div class="hero">
             <div class="hero-bg"></div>
             <div class="hero-content">
-                <h1>Connection</h1>
+                <h1>Yuru</h1>
                 <p>FINDING VALUE IN THE MARGINS</p>
                 <div class="btn lang-target" data-ja="探索を始める" data-en="Begin Exploration" onclick="showPage('finder')" style="margin-top: 60px;">探索を始める</div>
             </div>
@@ -285,6 +285,11 @@
                 ja: { title: "コーヒーが、時間を減速させる。", body: "丁寧に淹れられた一杯のコーヒー。その香りが広がるまでの数分間が、あなたの呼吸を整え、心を対話へと向かわせてくれるはずです。" },
                 en: { title: "Coffee Slows Time.", body: "A meticulously brewed cup of coffee. The minutes until its aroma spreads will steady your breathing and prepare your heart for dialogue." },
                 img: "https://images.unsplash.com/photo-1442512595331-e89e73853f31?q=80&w=1200"
+            },
+            {
+                ja: { title: "「Yuru」が意味すること。", body: "「ゆる」とは、効率や完璧さを追求しない、心の余白です。硬直した社会の関係性を少しだけゆるめ、差異を認め合う。それがyurucafeが掲げる、対話の根源的な形です。" },
+                en: { title: "The Meaning of 'Yuru'.", body: "'Yuru' represents the margin in one's heart that doesn't pursue efficiency or perfection. It's about loosening the rigid social structures and accepting differences. This is the fundamental form of dialogue at yurucafe." },
+                img: "https://images.unsplash.com/photo-1517048676732-d65bc937f952?q=80&w=1200"
             }
         ];
 
